finished styling and fixed gif start stop

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>GIFS "R" US</title>
-	<link href='https://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">  
 	<link rel="stylesheet" href="gif.css">	
 </head>
@@ -11,15 +11,13 @@
 <nav>
 <form id="getGifs">
 	<div class="row">
-		<div class="col-sm-1"></div>
 
-		<div class="col-sm-10">
-			<label id=inputLabel for ="gifInput">gifs-R-US</label>
-			<input type="text" id="gifInput" placeholder="Create a GIF button" required>
-			<input id="submitIdea" type="submit" value="Get the Gif">
+		<div class="col-sm-12">
+			<label id=inputLabel for ="gifInput">GIFS-R-US</label>
+			<input type="text" id="gifInput" placeholder="what do you wanna see?" required>
+			<input id="submitIdea" type="submit" value="Make Button">
 		</div>
 
-		<div class="col-sm-1"></div>
 	</div>
 </form>
 </nav>
@@ -27,7 +25,6 @@
 <div class="container" id="gifBody">
 	<div id="buttonsHere"></div>
 	<div id="gifBucket">
-		<div class="container">
 		<div class="row">
 			<div class="col-md-3" id="first"></div>
 			<div class="col-md-3" id="second"></div>
