added paths deleted old picture

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>GIFS "R" US</title>
 	<link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">  
-	<link rel="stylesheet" href="gif.css">	
+	<link rel="stylesheet" href="assets/css/gif.css">	
 </head>
 <body>
 
@@ -36,7 +36,7 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="gifs.js"></script>
+<script src="assets/javascript/gifs.js"></script>
 
 </body>
 </html>
