small styling change for bigger screens

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
+
 <nav>
+<div class="container">
 <form id="getGifs">
 	<div class="row">
 
@@ -17,10 +19,11 @@
 			<input type="text" id="gifInput" placeholder="what do you wanna see?" required>
 			<input id="submitIdea" type="submit" value="Make Button">
 		</div>
-
 	</div>
 </form>
+</div>
 </nav>
+
 
 <div class="container" id="gifBody">
 	<div id="buttonsHere"></div>
